[gd_scene load_steps=9 format=3 uid="uid://bvhrjr0m3gpyr"]

[ext_resource type="Script" uid="uid://duftn3kgojigb" path="res://SCRIPTS/player.gd" id="1_11188"]
[ext_resource type="Texture2D" uid="uid://cuq5qi71ee8gc" path="res://SPRITES/spritesheet.png" id="2_ks807"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfbtd"]
size = Vector2(8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yiba"]
atlas = ExtResource("2_ks807")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_746ru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yiba")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_11188"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ks807"]
curve = SubResource("Curve_11188")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uvyk3"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 4.0
initial_velocity_max = 8.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_ks807")
color = Color(0, 0, 0, 1)

[node name="player" type="RigidBody2D"]
mass = 32.0
script = ExtResource("1_11188")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_xfbtd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_746ru")

[node name="raycasts" type="Node2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="isRight" type="RayCast2D" parent="raycasts"]
target_position = Vector2(32, 0)

[node name="isDownRight" type="RayCast2D" parent="raycasts"]
target_position = Vector2(25, 25)

[node name="isOnGround" type="RayCast2D" parent="raycasts"]
target_position = Vector2(0, 32)

[node name="isDownLeft" type="RayCast2D" parent="raycasts"]
target_position = Vector2(-25, 25)

[node name="isLeft" type="RayCast2D" parent="raycasts"]
target_position = Vector2(-32, 0)

[node name="trail" type="GPUParticles2D" parent="."]
z_index = -4
amount = 64
process_material = SubResource("ParticleProcessMaterial_uvyk3")
